Add Simplified Chinese and Malay support for localisation

--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -1,14 +1,16 @@
 {
-  "session.creating": "creating...",
-  "session.joinsession": "join with code",
-  "session.sessionNotFoundMsg": "Session not found. Type another code or create a new session to start.",
-  "navbar.leave": "leave",
-  "navbar.connected": "connected",
-  "navbar.reconnecting": "disconnected. attempting to reconnect.",
-  "execSwitch.label": "Run code",
-  "execSwitch.Running": "Running",
-  "execSwitch.Stopped": "Stopped",
-  "error.empty_code": "Code is invalid or empty",
-  "session.hello": "Hello",
-  "session.createSession": "新建房间"
+  "session.createSession": "新建房间",
+  "error.empty_code": "代码无效或为空",
+  "execSwitch.Running": "跑步",
+  "execSwitch.Stopped": "已停止",
+  "execSwitch.label": "运行代码",
+  "navbar.connected": "连接",
+  "navbar.leave": "停止",
+  "navbar.reconnecting": "已断开连接。\n重新连接。",
+  "session.creating": "制作...",
+  "session.hello": "你好",
+  "session.joinsession": "使用代码加入",
+  "session.or": "或者",
+  "session.sessionNotFoundMsg": "未找到会话。\n请尝试其他代码或创建一个新会话。",
+  "session.typecodeMsg": "输入您的代码或创建一个新房间即可开始。"
 }
