--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -27,6 +27,16 @@
   },
   "login": {
     "welcome": "Login to continue",
-    "title": "Login"
+    "title": "Login",
+    "username": "Username",
+    "password": "Password",
+    "login": "Login",
+    "loginFailed": "Login failed"
+  },
+  "sidebar": {
+    "dashboard": "Dashboard",
+    "tutorials": "Tutorials",
+    "users": "Users",
+    "settings": "Settings"
   }
 }
