🚑 Full support language feature

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -38,5 +38,8 @@
     "tutorials": "Tutorials",
     "users": "Users",
     "settings": "Settings"
+  },
+  "blocklyCore": {
+    "logic": "Logic"
   }
 }
