✨ Add Session viewer for Admin, relocate websocket server directory

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -37,7 +37,8 @@
     "dashboard": "Dashboard",
     "tutorials": "Tutorials",
     "users": "Users",
-    "settings": "Settings"
+    "settings": "Settings",
+    "sessions": "Sessions"
   },
   "blocklyCore": {
     "logic": "Logic"
