🌐 MS / ZH support

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -38,9 +38,7 @@
     "tutorials": "Tutorials",
     "users": "Users",
     "settings": "Settings",
-    "sessions": "Sessions"
-  },
-  "blocklyCore": {
-    "logic": "Logic"
+    "sessions": "Sessions",
+    "toggle": "Sidebar"
   }
 }
