--- a/src/i18n/ms.json
+++ b/src/i18n/ms.json
@@ -8,12 +8,19 @@
     "label": "Jalankan kod"
   },
   "login": {
-    "welcome": "Log masuk untuk meneruskan"
+    "welcome": "Log masuk untuk meneruskan",
+    "login": "Log masuk",
+    "loginFailed": "Daftar masuk gagal",
+    "password": "Kata laluan",
+    "title": "Log masuk",
+    "username": "Nama pengguna"
   },
   "navbar": {
     "connected": "bersambung",
     "leave": "pergi",
-    "reconnecting": "terputus. \ncuba menyambung semula."
+    "reconnecting": "terputus. \ncuba menyambung semula.",
+    "home": "Rumah",
+    "signout": "Log keluar"
   },
   "session": {
     "about": "Mengenai aplikasi ini",
@@ -25,5 +32,13 @@
     "sessionNotFoundMsg": "Sesi tidak ditemui. \nTaip kod lain atau buat sesi baharu untuk bermula.",
     "typecodeMsg": "Taip kod anda atau buat ruang baharu untuk bermula.",
     "welcome": "Belajar pengekodan dengan AI"
+  },
+  "sidebar": {
+    "dashboard": "Papan pemuka",
+    "sessions": "Sesi",
+    "settings": "tetapan",
+    "toggle": "Navigasi",
+    "tutorials": "Tutorial",
+    "users": "Pengguna"
   }
 }
