🌐 💄 Update Styles of Navbar and Chat Bubble

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -40,5 +40,11 @@
     "settings": "Settings",
     "sessions": "Sessions",
     "toggle": "Sidebar"
+  },
+  "textbubble": {
+    "log": "Log",
+    "server": "Server",
+    "ai": "AI",
+    "you": "You"
   }
 }
