🚧 ⚡️ ✨ Improved tutorial feature - Block highlight in menu flyout workspace

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -48,7 +48,8 @@
 		"ai": "AI",
 		"you": "You",
 		"block": "Block",
-		"findBlock": "Find block"
+		"findBlock": "Find block",
+		"findBlockFromMenu": "Find from menu"
 	},
 	"tutorial": {
 		"title": "Pick Tutorial",
