⚡️ 💥 Major Update: Improvement for Code execution - Translation, Websocker Support, Global types for extention...and more

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -54,7 +54,8 @@
 		"findBlockFromMenu": "Find from menu",
 		"replying": "Replying...",
 		"ask": "Ask anything...",
-		"showingLatest": "Showing latest {{count}} messages"
+		"showingLatest": "Showing latest {{count}} messages",
+		"errorLog": "Error Log"
 	},
 	"tutorial": {
 		"title": "Pick Tutorial",
@@ -73,5 +74,8 @@
 	},
 	"logbuffer": {
 		"tooManyLogs": "Too many messages. old logs removed."
+	},
+	"generic": {
+		"connected": "Connected"
 	}
 }
