--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -61,7 +61,10 @@
 		"title": "チュートリアルを選択",
 		"description": "学習したいチュートリアルを選択しましょう",
 		"start": "チュートリアルを開始",
-		"startTutorial": "チュートリアルが選択されました"
+		"startTutorial": "チュートリアルが選択されました",
+		"tour": "ツアーを開始",
+		"startTour": "何ができるか見てみましょう。",
+		"startTourButton": "ツアーを始める"
 	},
 	"quickReply": {
 		"iDontKnow": "わかりません",
@@ -77,5 +80,14 @@
 	},
 	"generic": {
 		"connected": "接続しました"
+	},
+	"tour": {
+		"joinCode": "このセッションのコードです。このコードを覚えておくことで、続きから始めることができます。",
+		"blocklyWorkspace": "ワークスペースは、あなたのプログラムを作る場所です。",
+		"dialogue": "AIにチャットを送って質問をしたり、チュートリアルを一緒に進めることができます。",
+		"tourAgain": "このボタンを押すことで、このツアをもう一度見ることができます。",
+		"execSwitch": "ワークスペースで作ったプログラムをここから動かすことができます。プログラムの内容が変わったら、もう一度実行する必要があります。",
+		"tutorialSelector": "作りたい作品のチュートリアルをここから選択できます。",
+		"welcome": "ようこそ！このツアーでは、このアプリの使用方法について簡単に説明します。"
 	}
 }
