🐛 Update missing translations

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -92,7 +92,11 @@
 	},
 	"extention": {
 		"minecraft-core": {
-			"connectInfo": "Connect your Minecraft from **/connect {{host}}/vm/{{userCode}}/mc**"
+			"connectInfo": "Connect your Minecraft from **/connect {{host}}/vm/{{userCode}}/mc**. Try again if connection failed."
 		}
+	},
+	"editor": {
+		"workspaceTab": "Workspace",
+		"dialogueTab": "Chat"
 	}
 }
