--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -55,7 +55,8 @@
 		"replying": "返信中...",
 		"ask": "質問してみる...",
 		"showingLatest": "最後の{{count}}件のメッセージを表示しています",
-		"errorLog": "エラーログ"
+		"errorLog": "エラーログ",
+		"copiedToClipboard": "コピーしました！"
 	},
 	"tutorial": {
 		"title": "チュートリアルを選択",
@@ -92,7 +93,7 @@
 	},
 	"extention": {
 		"minecraft-core": {
-			"connectInfo": "Minecraftで **/connect {{host}}/vm/{{userCode}}/mc** と入力して接続可能です。接続が失敗する時はもう一度試してください。"
+			"connectInfo": "Minecraftで ***/connect {{host}}/vm/{{userCode}}/mc*** と入力して接続可能です。接続が失敗する時はもう一度試してください。暗号化の要求はオフにしてください。"
 		}
 	},
 	"editor": {
