--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -56,7 +56,8 @@
 		"ask": "Ask anything...",
 		"showingLatest": "Showing latest {{count}} messages",
 		"errorLog": "Error Log",
-		"copiedToClipboard": "Copied!"
+		"copiedToClipboard": "Copied!",
+		"blocksuggestions": "Suggested block"
 	},
 	"tutorial": {
 		"title": "Pick Tutorial",
@@ -65,7 +66,9 @@
 		"startTutorial": "Tutorial has selected",
 		"tour": "Start Tour",
 		"startTour": "Look what you can do.",
-		"startTourButton": "Begin Tour"
+		"startTourButton": "Begin Tour",
+		"easyMode": "Easy Mode",
+		"easyModeDescription": "AI's response will be more easier."
 	},
 	"quickReply": {
 		"done": "I'm done",
