--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -91,9 +91,10 @@
 		"blocklyWorkspace": "Workspace is place to make your code.",
 		"dialogue": "You can talk with AI for any help, or take a lesson from AI with tutorial.",
 		"tourAgain": "You can take this tour again with click this button.",
-		"execSwitch": "You can run your code on workspace. You need to run again if you edited.",
+		"execSwitch": "You can run your code on workspace.",
 		"tutorialSelector": "You can select any tutorial that you want to make.",
-		"welcome": "Welcome on board! This tour provides a brief overview of how to use this application."
+		"welcome": "Welcome on board! This tour provides a brief overview of how to use this application.",
+		"pushCode": "Push your current programs into server when its running."
 	},
 	"extention": {
 		"minecraft-core": {
