--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -91,9 +91,10 @@
 		"blocklyWorkspace": "ワークスペースは、あなたのプログラムを作る場所です。",
 		"dialogue": "AIにチャットを送って質問をしたり、チュートリアルを一緒に進めることができます。",
 		"tourAgain": "このボタンを押すことで、このツアをもう一度見ることができます。",
-		"execSwitch": "ワークスペースで作ったプログラムをここから動かすことができます。プログラムの内容が変わったら、もう一度実行する必要があります。",
+		"execSwitch": "ワークスペースで作ったプログラムをここから動かすことができます。",
 		"tutorialSelector": "作りたい作品のチュートリアルをここから選択できます。",
-		"welcome": "ようこそ！このツアーでは、このアプリの使用方法について簡単に説明します。"
+		"welcome": "ようこそ！このツアーでは、このアプリの使用方法について簡単に説明します。",
+		"pushCode": "作ったプログラムを、実行中に適用させることができます。"
 	},
 	"extention": {
 		"minecraft-core": {
