--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -115,6 +115,9 @@
 		"sessionEasyMode": "Easy Mode",
 		"summary": "Summary",
 		"workspace": "Workspace",
-		"loading": "Loading"
+		"loading": "Loading",
+		"sessionSummary": "Session summary",
+		"showHeatmap": "Show Heatmap",
+		"noScreenshotAvailable": "No screenshot available"
 	}
 }
