--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -115,6 +115,9 @@
 		"sessionEasyMode": "かんたんモード",
 		"summary": "サマリー",
 		"workspace": "ワークスペース",
-		"loading": "読み込み中です"
+		"loading": "読み込み中です",
+		"sessionSummary": "セッションのサマリー",
+		"showHeatmap": "ヒートマップを表示",
+		"noScreenshotAvailable": "スクリーンショットが利用できません"
 	}
 }
