--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -35,7 +35,8 @@
 		"sessionNotFoundMsg": "セッションがありません。\n別のコードを入力するか、新しいセッションを作成して開始してください。",
 		"typecodeMsg": "コードを入れるか、新しいセッションを作ってはじめましょう。",
 		"welcome": "AIを使ってプログラミングを学ぼう。",
-		"debuginfo": "デバッグ情報"
+		"debuginfo": "デバッグ情報",
+		"serverDownMsg": "サーバーに接続できません。インターネットを確認するか、管理者にお問い合わせください。"
 	},
 	"sidebar": {
 		"dashboard": "ダッシュボード",
