--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -90,7 +90,10 @@
 		"execSwitch": "ワークスペースで作ったプログラムをここから動かすことができます。",
 		"tutorialSelector": "作りたい作品のチュートリアルをここから選択できます。",
 		"welcome": "ようこそ！このツアーでは、このアプリの使用方法について簡単に説明します。",
-		"pushCode": "作ったプログラムを、実行中に適用させることができます。"
+		"tabs": "タブを切り替えて、ワークスペースとチャットの間を移動できます。",
+		"switchToWorkspace": "ワークスペースに切り替えてみましょう。",
+		"syncCode": "ここから作ったプログラムをアップデートすることができます。",
+		"switchToDialogue": "では、チャットのタブへ戻りましょう。"
 	},
 	"extention": {
 		"minecraft-core": {
