--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -77,7 +77,9 @@
 		"easyModeChanged": "Turn Easy mode to {{status}}"
 	},
 	"vm": {
-		"outOfMemory": "Machine reached memory limit"
+		"outOfMemory": "Machine reached memory limit",
+		"updatedScriptSuccess": "Updated script executed successfully.",
+		"updatedScriptError": "Error executing updated script: {{error}}"
 	},
 	"logbuffer": {
 		"tooManyLogs": "Too many messages. old logs removed."
