--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -77,7 +77,9 @@
 		"easyModeChanged": "かんたんモードを{{status}}にしました"
 	},
 	"vm": {
-		"outOfMemory": "マシンが使えるメモリの上限に達しました"
+		"outOfMemory": "マシンが使えるメモリの上限に達しました",
+		"updatedScriptSuccess": "新しいコードの実行に成功しました",
+		"updatedScriptError": "新しいコード実行中にエラーが発生："
 	},
 	"logbuffer": {
 		"tooManyLogs": "メッセージが多すぎます。古いログは削除されました。"
