✨ New welcome message depends on language

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -126,5 +126,8 @@
 	"quickReply": {
 		"WhatINeed": "What I need to do?",
 		"HowToUse": "How to use this?"
+	},
+	"dialogue": {
+		"Introduction": "Hi! click the quick reply button of type in your questions to choose what to do!"
 	}
 }
