--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -126,5 +126,8 @@
   "quickReply": {
     "HowToUse": "どうやって使うの？",
     "WhatINeed": "何をしたらいいの？"
+  },
+  "dialogue": {
+    "Introduction": "こんにちは！まずは画面下のボタンや、チャット欄から、何をしたいか決めましょう！"
   }
 }
