📝 Add "about this app" section on starting screen

--- a/src/i18n/ja.json
+++ b/src/i18n/ja.json
@@ -38,7 +38,8 @@
 		"typecodeMsg": "コードを入れるか、新しいセッションを作ってはじめましょう。",
 		"welcome": "AIを使ってプログラミングを学ぼう。",
 		"debuginfo": "デバッグ情報",
-		"serverDownMsg": "サーバーに接続できません。インターネットを確認するか、管理者にお問い合わせください。"
+		"serverDownMsg": "サーバーに接続できません。インターネットを確認するか、管理者にお問い合わせください。",
+		"aboutText": "このアプリは、LLM（AI）を利用したチュートリアルを提供するセルフホストソフトウェアです。  このアプリケーションを利用すると、サイトの管理者は個人を特定できない形で、ユーザーの利用状況や、発言のデータを収集することができ、収集されたデータはアプリ内のチャット機能の学習や、AIの挙動改善に利用されます。  アプリで提供されたデータの取扱の詳しい情報については、ウェブサイトの管理者にお問い合わせください。このアプリケーションはオープンソースで公開されており、ソースコードが改変されている可能性もあるため、ウェブサイトの管理者が不明な場合、アプリケーションを利用しないことをお勧めします。  作成したセッションの情報のデータは削除されることがあります。"
 	},
 	"sidebar": {
 		"dashboard": "ダッシュボード",
